# charm-ci

./: .gitignore  .licenserc.yaml  AGENTS.md  README.md  pyproject.toml  renovate.json
.github/scripts/: create-publish-release.sh  inject-charm-version.sh  resolve-run.sh
.github/workflows/: build-artifacts.yml  ci.yml  doc-test.yml  integration-test.yml  publish-artifacts.yml  test-integration.yml
docs/: ISD283.md
examples/: artifacts.yaml  concierge-microk8s.yaml  spread.yaml  tox.ini
examples/.github/workflows/: publish.yaml
examples/k8s-charm/: tox.ini
examples/k8s-charm/tests/integration/: conftest.py  test_charm.py
examples/machine-charm/: charmcraft.yaml  tox.ini
examples/machine-charm/tests/integration/: conftest.py  test_charm.py
examples/tests/integration/: conftest.py  test_env_template.py  test_k8s_charm.py  test_machine_charm.py
src/opcli/: __init__.py  __main__.py  app.py  pytest_plugin.py
src/opcli/commands/: __init__.py  artifacts.py  env.py  install.py  pytest_cmd.py  spread.py  tutorial_cmd.py
src/opcli/core/: __init__.py  artifacts.py  constants.py  discovery.py  env.py  exceptions.py  install.py  pack_utils.py  progress.py  provision.py  publish.py  pytest_args.py  secrets.py  spread.py  subprocess.py  template.py  tutorial.py  yaml_io.py
src/opcli/data/: __init__.py
src/opcli/models/: __init__.py  artifacts.py  artifacts_build.py
tests/: conftest.py
tests/integration/: test_spread_lxd.py
tests/unit/: conftest.py  test_artifacts.py  test_artifacts_path.py  test_discovery.py  test_env.py  test_fork_rocks.py  test_install.py  test_models.py  test_pack_utils.py  test_provision.py  test_publish.py  test_publish_json_flag.py  test_publish_release_script.py  test_publish_workflow.py  test_pytest_args.py  test_pytest_invocation_mode.py  test_pytest_plugin.py  test_pytest_templates.py  test_scaffold.py  test_secrets.py  test_smoke.py  test_spread.py  test_subprocess.py  test_tutorial.py
