[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opcli"
version = "0.0.1-alpha.2"
description = "CLI tool for operator development workflows (Charms, Rocks, Snaps)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2",
    "ruamel.yaml>=0.18",
    "jinja2>=3.1",
]

[project.urls]
Repository = "https://github.com/canonical/charm-ci"
Issues = "https://github.com/canonical/charm-ci/issues"

[project.scripts]
opcli = "opcli.app:app"

[project.entry-points.pytest11]
pytest_opcli = "opcli.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/opcli"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["A", "B", "C", "D", "E", "F", "I", "N", "PL", "RUF", "S", "SIM", "TC", "UP", "W"]
ignore = [
    "B008",   # typer.Option/Argument in defaults is the standard pattern
    "B904",
    "D107",
    "D203",
    "D204",
    "D205",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "E501",
    "S105",
    "S603",
    "TC002",
    "TC006",
    "UP006",
    "UP007",
    "UP035",
    "UP045",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "D100", "D101", "D102", "D103", "D104", "D212", "D415", "D417", "S"]
# PLC0415: opcli.pytest_plugin uses lazy imports to avoid the module-not-measured
# coverage bootstrapping problem (pytest loads this plugin before pytest-cov starts).
"src/opcli/pytest_plugin.py" = ["PLC0415"]
"src/opcli/core/spread.py" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["opcli"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external services (LXD, spread)",
]

[dependency-groups]
dev = [
    "codespell>=2.2",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
]

[tool.codespell]
skip = "build,lib,venv,.tox,.git,.mypy_cache,.ruff_cache,.coverage,htmlcov,uv.lock"

[tool.coverage.run]
branch = true
source_pkgs = ["opcli"]

[tool.coverage.report]
show_missing = true
